# zenhub-bulk-issuer

./: Cargo.toml  README.adoc  zenhub-queries.graphql
src/: main.rs
zenhub-schema-fetcher/: codegen.yml  package.json  schema.graphql
zenhub-schema-fetcher/patches/: graphql+16.0.1.patch
