[package]
name = "zenhub-bulk-issuer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.48"
graphql_client = { version = "0.10.0", features = ["reqwest"] }
regex = "1.5.4"
reqwest = "0.11.6"
serde = "1.0.130"
structopt = "0.3.25"
tempfile = "3.2.0"
tokio = { version = "1.14.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.2"
